--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<html>
+	<head>
+		<title>Hosted APIs</title>
+	</head>
+	<body>
+		<h1>Hosted APIs</h1>
+		<p>Owner: Shoaib S. Shaikh</p>
+	</body>
+</html>
